--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
    gap: 1.5rem;
    justify-content: center;
    grid-template-columns: repeat(1, minmax(300px, 330px));
+
 }
 
 .dashboard__person {
@@ -163,11 +164,16 @@ body {
     justify-content: space-between;
 }
 
+.tracking-card__header {
+    margin-bottom: 1rem;
+}
+
 .tracking-card__menu {
     cursor: pointer;
 }
 
 .tracking-card__title {
+    margin: 0;
     font-weight: var(--weight-regular);
     font-size: var(--fs-base);
 }
@@ -185,4 +191,59 @@ body {
 
 .dashboard__item:hover .tracking-card{ 
     background-color: var(--blue-500);
+}
+
+
+@media (min-width: 1024px) {
+    .dashboard__content {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .dashboard__person {
+        grid-row-start: 1;
+        grid-row-end: 3;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    .info-card {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-grow: 1;
+    }
+
+    .info-card__photo {
+        margin-bottom: 1.5rem;
+    }
+
+    .info-card__title {
+        font-size: 30px;
+    }
+
+    .view-selector {
+        flex-direction: column;
+    }
+
+    .view-selector__item:not(:last-child) {
+        margin-bottom: 1rem;
+    }
+
+    .tracking-card__body {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .tracking-card__time {
+        margin-bottom: 0.75rem;
+        font-size: 48px;
+    }
+
+    .tracking-card__header {
+        margin-bottom: 0.75rem;
+    }
 }
